--- a/scai/kregistry/CMakeLists.txt
+++ b/scai/kregistry/CMakeLists.txt
@@ -32,12 +32,16 @@
  # @date 30.06.2015
 ###
 
-### Set PROJECT NAME / supported LANGUAGES
-project ( scai_kregistry )
+## Define name of the SCAI module project
+
+set ( MODULE_NAME kregistry )
 
 set ( INTERNAL_DEPS common logging )
 set ( SCAI_KREGISTRY_EXTERNAL_DEPS )
 
+## Define all library names with the (global) prefix SCAI_LIBRARY_PREFIX
+
+set ( PROJECT_NAME "${SCAI_LIBRARY_PREFIX}${MODULE_NAME}" )
 string ( REGEX REPLACE "([a-z]+)" "${SCAI_LIBRARY_PREFIX}\\1" INTERNAL_LIBS "${INTERNAL_DEPS}")
 
 ### includes ###
@@ -99,7 +103,6 @@ scai_project (
 )
 
 ## add subdirectories
-add_subdirectory ( doc )
 
 if    ( BUILD_EXAMPLES )
 add_subdirectory ( examples )
@@ -136,6 +139,5 @@ relative_install( FILES ${CXX_HEADERS} DESTINATION ${${UPPER_PROJECT_NAME}_INCLU
 ## install library.hpp
 install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
 
-## add custum target distClean
-include ( CustomCommands/DistClean )
-
+## add custom target doc_${MODULE_NAME} to generate Sphinx user documentation 
+include ( CustomCommands/SphinxDoc )
