--- a/scai/tracing/CMakeLists.txt
+++ b/scai/tracing/CMakeLists.txt
@@ -32,13 +32,16 @@
  # @date 10.06.2015
 ###
 
-### Set PROJECT NAME / supported LANGUAGES
+## Define name of the SCAI module project
 
-project ( scai_tracing )
+set ( MODULE_NAME tracing )
 
 set ( INTERNAL_DEPS common logging ) 
 set ( SCAI_TRACING_EXTERNAL_DEPS Java ) 
 
+## Define all library names with the (global) prefix SCAI_LIBRARY_PREFIX
+
+set ( PROJECT_NAME "${SCAI_LIBRARY_PREFIX}${MODULE_NAME}" )
 string ( REGEX REPLACE "([a-z]+)" "${SCAI_LIBRARY_PREFIX}\\1" INTERNAL_LIBS "${INTERNAL_DEPS}")
 
 ### includes ###
@@ -108,10 +111,9 @@ scai_project (
 )
 
 ## add subdirectories
-add_subdirectory ( doc )
 
 if    ( BUILD_EXAMPLES )
-add_subdirectory ( examples )
+    add_subdirectory ( examples )
 endif ( BUILD_EXAMPLES )
 
 add_subdirectory ( macros )
@@ -185,6 +187,5 @@ relative_install ( FILES ${CXX_HEADERS} DESTINATION ${${UPPER_PROJECT_NAME}_INCL
 ## install library.hpp
 install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
 
-## add custum target distClean
-include ( CustomCommands/DistClean )
-
+## add custom target doc_${MODULE_NAME} to generate Sphinx user documentation 
+include ( CustomCommands/SphinxDoc )
