--- a/scai/utilskernel/CMakeLists.txt
+++ b/scai/utilskernel/CMakeLists.txt
@@ -32,14 +32,17 @@
  # @date 18.02.2016
 ###
 
-### Set PROJECT NAME / supported LANGUAGES
+## Define name of the SCAI module project
 
-project ( scai_utilskernel )
+set ( MODULE_NAME utilskernel )
 
 set ( INTERNAL_DEPS common logging tracing tasking hmemo kregistry blaskernel ) 
 set ( SCAI_UTILSKERNEL_EXTERNAL_DEPS  OpenMP CUDA MIC ) 
 
-string ( REGEX REPLACE "([a-z]+)" "${SCAI_LIBRARY_PREFIX}\\1" INTERNAL_LIBS "${INTERNAL_DEPS}" )
+## Define all library names with the (global) prefix SCAI_LIBRARY_PREFIX
+
+set ( PROJECT_NAME "${SCAI_LIBRARY_PREFIX}${MODULE_NAME}" )
+string ( REGEX REPLACE "([a-z]+)" "${SCAI_LIBRARY_PREFIX}\\1" INTERNAL_LIBS "${INTERNAL_DEPS}")
 
 ### includes ###
 
@@ -120,7 +123,6 @@ if    ( BUILD_EXAMPLES )
 add_subdirectory ( examples )
 endif ( BUILD_EXAMPLES )
 
-add_subdirectory ( doc )
 add_subdirectory ( mepr )
 
 if ( USE_MIC )
@@ -165,6 +167,5 @@ relative_install( FILES ${CXX_HEADERS} DESTINATION ${${UPPER_PROJECT_NAME}_INCLU
 ## install library.hpp
 install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
 
-### add custum target distClean
-include ( CustomCommands/DistClean )
-
+## add custom target doc_${MODULE_NAME} to generate Sphinx user documentation 
+include ( CustomCommands/SphinxDoc )
