--- a/scai/hmemo/examples/cuda/CMakeLists.txt
+++ b/scai/hmemo/examples/cuda/CMakeLists.txt
@@ -38,6 +38,7 @@
 #
 
 #empty EXAMPLE_FILES and EXAMPLE_EXECUTES in subdir
+
 set ( EXAMPLE_FILES "" )
 set ( EXAMPLE_EXECUTABLES "" )
 
@@ -57,16 +58,13 @@ foreach ( executable Example1 Example2 Devices CUDABenchContext AliasProblem )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
 
-# configure make.inc for examples
-include ( Functions/prepareExamplesMakeInc )
-prepareExamplesMakeInc()
-configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../../examples_make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/make.inc" )
+set ( INSTALL_EXAMPLE_DIR "share/examples/scai-${MODULE_NAME}-${SCAI_VERSION}/cuda" )
 
-## install examples
+include ( Functions/buildExamples )
 
-install ( FILES       ${EXAMPLE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/make.inc 
-          DESTINATION ${PROJECT_EXAMPLE_DIR}/cuda )
+genExampleMakefile()       #  build make.inc, makefile.install -> makefile
 
-install ( FILES       ${CMAKE_CURRENT_BINARY_DIR}/../install_Makefile
-          DESTINATION ${PROJECT_EXAMPLE_DIR}/cuda
-          RENAME      Makefile  )
+## install examples sources
+
+install ( FILES       ${EXAMPLE_FILES}
+          DESTINATION ${INSTALL_EXAMPLE_DIR} )
