--- a/scai/lama/examples/nbody/CMakeLists.txt
+++ b/scai/lama/examples/nbody/CMakeLists.txt
@@ -39,33 +39,29 @@ find_package( GLUT )
 
 if    ( OPENGL_FOUND AND GLUT_FOUND )
 
-	include_directories( ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR} )
+    get_filename_component ( SUBDIR ${CMAKE_CURRENT_SOURCE_DIR} NAME )
 
-	set ( EXECUTABLES nbody test )
+    include_directories( ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR} )
 
-	foreach ( executable ${EXECUTABLES} )
-	    add_executable( ${executable}.exe ${executable}.cpp )
-	    target_link_libraries( ${executable}.exe ${PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} )
-	    set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
-	    set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
-	endforeach ( executable )
+    set ( EXECUTABLES nbody test )
 
-	# configure make.inc for examples
-	include ( Functions/prepareExamplesMakeInc )
-	prepareExamplesMakeInc()
-	configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../../examples_make.inc.in" make.inc )
-	configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../../examples_Makefile.in" install_Makefile COPYONLY )
+    foreach ( executable ${EXECUTABLES} )
+        add_executable( ${executable}.exe ${executable}.cpp )
+        target_link_libraries( ${executable}.exe ${PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} )
+        set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
+        set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
+    endforeach ( executable )
 
-	## install examples
+    set ( INSTALL_EXAMPLE_DIR "share/examples/scai-${MODULE_NAME}-${SCAI_VERSION}/${SUBDIR}" )
+    
+    include ( Functions/buildExamples )
 
-	set ( PROJECT_EXAMPLE_SUB_DIR ${PROJECT_EXAMPLE_DIR}/mandelbrot )
+    genExampleMakefile()       #  build make.inc, makefile.install -> makefile
 
-	install ( FILES       ${EXAMPLE_FILES}
-	          DESTINATION ${PROJECT_EXAMPLE_SUB_DIR} )
-	install ( FILES       ${CMAKE_CURRENT_BINARY_DIR}/make.inc
-	          DESTINATION ${PROJECT_EXAMPLE_SUB_DIR} )
-	install ( FILES       ${CMAKE_CURRENT_BINARY_DIR}/install_Makefile
-	          DESTINATION ${PROJECT_EXAMPLE_SUB_DIR}
-	          RENAME      Makefile  )
+    ## install examples sources
+
+    install ( FILES       ${EXAMPLE_FILES}
+              DESTINATION ${INSTALL_EXAMPLE_DIR} )
+
 
 endif ( OPENGL_FOUND AND GLUT_FOUND )
