--- a/scai/lama/examples/bench/CMakeLists.txt
+++ b/scai/lama/examples/bench/CMakeLists.txt
@@ -32,6 +32,8 @@
  # @date 02.12.2015
 ###
 
+get_filename_component ( SUBDIR ${CMAKE_CURRENT_SOURCE_DIR} NAME )
+
 foreach ( executable conversion matadd matmul matvecmul maxnorm rowcol scan sort )
     add_executable( ${executable}.exe ${executable}.cpp )
     target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
@@ -39,20 +41,13 @@ foreach ( executable conversion matadd matmul matvecmul maxnorm rowcol scan sort
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
 
-# configure make.inc for examples
-include ( Functions/prepareExamplesMakeInc )
-prepareExamplesMakeInc()
-configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../../examples_make.inc.in" make.inc )
-configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../../examples_Makefile.in" install_Makefile COPYONLY )
+set ( INSTALL_EXAMPLE_DIR "share/examples/scai-${MODULE_NAME}-${SCAI_VERSION}/${SUBDIR}" )
 
-## install examples
+include ( Functions/buildExamples )
 
-set ( PROJECT_EXAMPLE_SUB_DIR ${PROJECT_EXAMPLE_DIR}/bench )
+genExampleMakefile()       #  build make.inc, makefile.install -> makefile
 
-install ( FILES       ${EXAMPLE_FILES}
-          DESTINATION ${PROJECT_EXAMPLE_SUB_DIR} )
-install ( FILES       ${CMAKE_CURRENT_BINARY_DIR}/make.inc
-          DESTINATION ${PROJECT_EXAMPLE_SUB_DIR} )
-install ( FILES       ${CMAKE_CURRENT_BINARY_DIR}/install_Makefile
-          DESTINATION ${PROJECT_EXAMPLE_SUB_DIR}
-          RENAME      Makefile  )
+## install examples sources
+
+install ( FILES       ${EXAMPLE_FILES} ${HEADER}
+          DESTINATION ${INSTALL_EXAMPLE_DIR} )
